<resources>
    <string name="app_name">LoginApp</string>
    <string name="name">Name</string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="details">Details</string>
    <string name="link_profile_picture">Link profile picture</string>
    <string name="you_do_not_have_an_account_sign_up">You do not have an account? Sign up</string>
    <string name="all_fields_are_required">All fields are required.</string>
    <string name="username_does_not_exist_please_register">Username does not exist, please register.</string>
    <string name="your_password_is_wrong_please_check_your_password">Your password is wrong, please check your password.</string>
    <string name="username_already_registered_try_another">Username already registered, try another.</string>
</resources>