<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.rasenyer.loginapp.ui.fragments.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_RegisterFragment"
            app:destination="@id/RegisterFragment"/>

        <action
            android:id="@+id/action_LoginFragment_to_DetailsFragment"
            app:destination="@id/DetailsFragment"/>

    </fragment>

    <fragment
        android:id="@+id/RegisterFragment"
        android:name="com.rasenyer.loginapp.ui.fragments.register.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_RegisterFragment_to_LoginFragment"
            app:destination="@id/LoginFragment"
            app:popUpTo="@id/LoginFragment"
            app:popUpToInclusive="true"/>

    </fragment>

    <fragment
        android:id="@+id/DetailsFragment"
        android:name="com.rasenyer.loginapp.ui.fragments.details.DetailsFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_details">

    </fragment>

</navigation>